Added folders for stylesheets, game.html, and added text for future links in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"/>
         <meta name="description" content="An online version of quarto - a fast
-            -paced strategic board game.">
-        <meta name="keywords" content="quarto,online,board,game,ffrankies">
-        <meta name="author" content="Frank Wanye">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            -paced strategic board game."/>
+        <meta name="keywords" content="quarto,online,board,game,ffrankies"/>
+        <meta name="author" content="Frank Wanye"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!--Separate metas from header stuff-->
         <title>Quarto-Arena</title>
+        <link type="text/css" rel="stylesheet" href="style/index.css"/>
     </head>
     <!--End of header section-->
     <body>
@@ -18,5 +19,11 @@
             tic-tac-toe. The game consists of a 4x4 game board, as well as a
             common pool of 16 unique pieces. The game objective of the game
             is to line up 4 pieces that have something in common.</h3>
+        <h4>Log In</h4>
+        <h4>Log Out</h4>
+        <h4>Start Game</h4>
+        <h4>Instructions</h4>
+        <h4>Leaderboards</h4>
+        <h1>&copy; 2016 Frank Wanye</h1>
     </body>
 </html>
