Added some styling for the index

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -10,23 +10,18 @@
         <!--Separate metas from header stuff-->
         <title>Quarto-Arena</title>
         <link type="text/css" rel="stylesheet" href="style/index.css"/>
-        <script src="scripts/header.js"></script>
     </head>
     <!--End of header section-->
     <body>
-        <div id="header" class="largeHeader">
-            <div id="buttons">
-                <a class="button" id="log-in">Log In</a>
-                <a class="button" id="sign-up">Sign Up</a>
-            </div>
-            <h1>Quarto-Arena</h1>
-        </div>
-        <div id="container" class="largeContainer">
-            <h2>Welcome to the Quarto Arena! This site is still in development.</h2>
+        <h1>Quarto-Arena<br />Leaderboard</h1>
+        <div id="container">
+            <!-- <h2>Welcome to the Quarto Arena! This site is still in development.</h2>
             <h3>Quarto is a fast-paced, two-player strategic board game, similar to
                 tic-tac-toe. The game consists of a 4x4 game board, as well as a
                 common pool of 16 unique pieces. The game objective of the game
-                is to line up 4 pieces that have something in common.</h3>
+                is to line up 4 pieces that have something in common.</h3> -->
+            <div class="button" id="log-in">Log In</div>
+            <div class="button" id="log-out">Log Out</div>
             <h4><a href="./game.html">Start Game</a></h4>
             <h4><a href="./howto.html">Instructions</a></h4>
             <h4><a href="./leaderboard.html">Leaderboards</a></h4>
