Started adding onclick functionality for the quarto game.

--- a/public/game.html
+++ b/public/game.html
@@ -10,6 +10,8 @@
         <!--Separate metas from header stuff-->
         <title>Quarto-Arena</title>
         <link type="text/css" rel="stylesheet" href="style/game.css"/>
+        <script src="scripts/board.js"></script>
+        <script src="scripts/player.js"></script>
         <script src="scripts/quarto.js"></script>
     </head>
     <!--End of header section-->
@@ -23,8 +25,8 @@
         </div>
         <div id="container">
             <div id="notification">
-                Current Move: Player1. Select a piece for your opponent to
-                place.
+                <h2>Current Move: Player1. Select a piece for your opponent to
+                place.</h2>
             </div>
             <div id="game">
                 <div id="playerScores">
