Can now play one round against a human opponent.

--- a/public/game.html
+++ b/public/game.html
@@ -25,7 +25,7 @@
         </div>
         <div id="container">
             <div id="notification">
-                <h2>Current Move: Player1. Select a piece for your opponent to
+                <h2>Player1: Select a piece for your opponent to
                 place.</h2>
             </div>
             <div id="game">
