--- a/public/index.html
+++ b/public/index.html
@@ -49,36 +49,36 @@
                     <h6>Name</h6>
                     <input type="text" name="p1name" value="Darth Cat"/>
                     <h6>Difficulty</h6>
-                    <p><input type="radio" name="p1rank" value="human"
+                    <p><input type="radio" name="p1rank" value="0"
                         checked="checked" />
                         Human</p><!--
-                    --><p><input type="radio" name="p1rank" value="beginner" />
+                    --><p><input type="radio" name="p1rank" value="1" />
                         Beginner</p><!--
-                    --><p><input type="radio" name="p1rank" value="amateur" />
+                    --><p><input type="radio" name="p1rank" value="2" />
                         Amateur</p><!--
-                    --><p><input type="radio" name="p1rank" value="pro" />
+                    --><p><input type="radio" name="p1rank" value="3" />
                         Pro</p><!--
-                    --><p><input type="radio" name="p1rank" value="expert" />
+                    --><p><input type="radio" name="p1rank" value="4" />
                         Expert</p><!--
-                    --><p><input type="radio" name="p1rank" value="champ" />
+                    --><p><input type="radio" name="p1rank" value="5" />
                         Champ</p>
                     <hr />
                     <h5>Player 2</h5>
                     <h6>Name</h6>
                     <input type="text" name="p2name" value="Anakin Dogwalker" />
                     <h6>Difficulty</h6>
-                    <p><input type="radio" name="p2rank" value="human"
+                    <p><input type="radio" name="p2rank" value="0"
                         checked="checked" />
                         Human</p><!--
-                    --><p><input type="radio" name="p2rank" value="beginner" />
+                    --><p><input type="radio" name="p2rank" value="1" />
                         Beginner</p><!--
-                    --><p><input type="radio" name="p2rank" value="amateur" />
+                    --><p><input type="radio" name="p2rank" value="2" />
                         Amateur</p><!--
-                    --><p><input type="radio" name="p2rank" value="pro" />
+                    --><p><input type="radio" name="p2rank" value="3" />
                         Pro</p><!--
-                    --><p><input type="radio" name="p2rank" value="expert" />
+                    --><p><input type="radio" name="p2rank" value="4" />
                         Expert</p><!--
-                    --><p><input type="radio" name="p2rank" value="champ" />
+                    --><p><input type="radio" name="p2rank" value="5" />
                         Champ</p>
                     <hr />
                     <input type="submit" value="Start" id="hotseatStart" />
