Can now play multiple rounds on Hot Seat

--- a/public/game.html
+++ b/public/game.html
@@ -27,6 +27,8 @@
             <div id="notification">
                 <h2>Player1: Select a piece for your opponent to
                 place.</h2>
+                <div id="yes" class="notVisible">Yes</div>
+                <div id="no" class="notVisible">No</div>
             </div>
             <div id="game">
                 <div id="playerScores">
