Added randomized name generation to new game.

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,12 @@
                     <h4>Hot Seat</h4>
                     <hr/>
                     <h5>Player 1</h5>
-                    <input type="text" name="p1name" value="Darth Cat"/>
+                    <input type="text" name="p1name" value="Darth Cat"
+                        id="local_game_p1name"/>
                     <hr />
                     <h5>Player 2</h5>
-                    <input type="text" name="p2name" value="Anakin Dogwalker" />
+                    <input type="text" name="p2name" value="Anakin Dogwalker"
+                        id="local_game_p2name"/>
                     <hr />
                     <input type="submit" value="Start" id="local_game_start" />
                 </div>
