Revamped game UI. Refactored some of the sass code.

--- a/public/game.html
+++ b/public/game.html
@@ -17,11 +17,13 @@
     <!--End of header section-->
     <body>
         <div id="header">
-            <div id="buttons">
-                <a class="button" id="log-in">Log In</a>
-                <a class="button" id="sign-up">Sign Up</a>
-            </div>
+            <!-- <div id="buttons"> -->
             <h1><a href="index.html">Quarto-Arena</a></h1>
+            <a class="button" id="username">Not Logged In</a>
+            <a class="button" id="log-in">Log In</a>
+            <a class="button" id="sign-up">Sign Up</a>
+            <!-- </div> -->
+            <!-- <div id="logo" class="logoLarge">Q</div> -->
         </div>
         <div id="container">
             <div id="notification">
